--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ serde_json = "1.0.140"
 tokio = { version = "1.44.1", features = ["full"] }
 axum = "0.8.4"
 tower-http = { version = "0.6.1", features = ["cors"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+async-trait = "0.1"
+chrono = { version = "0.4", features = ["serde"] }
