--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 async-trait = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
+sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
+anyhow = "1.0"
